--- a/Flexbox_And_Responsive/Flexbox Starter/app.css
+++ b/Flexbox_And_Responsive/Flexbox Starter/app.css
@@ -10,5 +10,10 @@ h1 {
     height: 500px;
     margin: 0 auto;
     border: 5px solid #003049;
+    display: flex;
 }
 
+#container div {
+  width: 200px;
+  height: 200px;
+}
