--- a/Flexbox_And_Responsive/Flexbox Starter/app.css
+++ b/Flexbox_And_Responsive/Flexbox Starter/app.css
@@ -11,6 +11,9 @@ h1 {
     margin: 0 auto;
     border: 5px solid #003049;
     display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
 #container div {
